<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_spacing_large"
    android:background="@color/primary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_entidade_nome"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/default_spacing_medium"
            android:layout_marginBottom="@dimen/default_spacing_medium"
            android:textSize="@dimen/default_textSize_veryLarge"
            android:textColor="@color/white"
            android:text="@string/entity_profile_nome"
            android:layout_alignParentLeft="true"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_seguir_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing_medium"
            android:layout_marginBottom="@dimen/default_spacing_medium"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:text="@string/entity_profile_seguir"/>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing_small"
        android:layout_marginBottom="@dimen/default_spacing_medium"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_spacing_large"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/default_textSize_large"
                android:text="@string/entity_profile_quemsomos" />

            <TextView
                android:id="@+id/txt_entidade_descricao"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/default_spacing_medium"
                android:textSize="@dimen/default_textSize_medium"
                android:text="@string/entity_profile_quemsomos_descricao" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing_small"
        android:layout_marginBottom="@dimen/default_spacing_medium"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_spacing_large"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/default_textSize_large"
                android:text="@string/entity_profile_area_atuacao" />
            <TextView
                android:id="@+id/txt_entidade_area_atuacao"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/default_textSize_medium"
                android:text="@string/entity_profile_area_atuacao_descricao" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing_small"
        android:layout_marginBottom="@dimen/default_spacing_medium"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_spacing_large"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_entidade_popularidade"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/default_textSize_large"
                android:text="@string/entity_profile_popularidade" />
            <TextView
                android:id="@+id/txt_entidade_quantos_seguidores"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/default_textSize_medium"
                android:text="@string/entity_profile_popularidade_seguidores" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing_small"
        android:layout_marginBottom="@dimen/default_spacing_medium"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_spacing_large"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_entidade_eventos"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/default_textSize_large"
                android:text="@string/entity_profile_eventos" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recycler_entidade_eventos"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/default_spacing_large"
                android:scrollbars="horizontal" />

        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>